# polygres-sdk

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish-python-sdk.yml
src/polygres/: __init__.py  cli.py  cli_auth.py  cli_client.py  cli_config.py  cli_errors.py  cli_output.py  cli_secrets.py  client.py  errors.py  models.py
tests/: test_cli.py  test_client.py
tests/heavy/: test_cli_installed_staging.py
